@@ -48,7 +48,6 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -336,8 +335,8 @@ public class ShareFetchCollectorTest {
     }
 
     private void subscribeAndAssign(TopicIdPartition tp) {
-        subscriptions.subscribe(Collections.singleton(tp.topic()), Optional.empty());
-        subscriptions.assignFromSubscribed(Collections.singleton(tp.topicPartition()));
+        subscriptions.subscribe(Set.of(tp.topic()), Optional.empty());
+        subscriptions.assignFromSubscribed(Set.of(tp.topicPartition()));
     }
 
     /**
